==> crosser/examples-embedded/EFM_Gxxx_STK/Platform-EFM_Gxxx_STK/Hal/Hal.c <==
#include "Hal.h"
#include "Em_Message.h"
#include <em_cmu.c>
#include <em_chip.h>
#include <em_gpio.c>
#include <em_int.c>
#include <em_timer.c>
#include <em_usart.c>
#include <em_system.c>
#include <system_efm32g.c>
#define LED_PORT                gpioPortC
#define LED_PIN                 0
#define LED_OFF()               GPIO_PinOutClear(LED_PORT, LED_PIN)
#define LED_ON()                GPIO_PinOutSet(LED_PORT, LED_PIN)
#define LED_READ()              GPIO_PinOutGet(LED_PORT, LED_PIN)
#define LED_TOGGLE()            GPIO_PinOutToggle(LED_PORT, LED_PIN)
#define CONNECTED_LED_PORT      gpioPortC
#define CONNECTED_LED_PIN       3
#define CONNECTED_LED_OFF()     GPIO_PinOutClear(CONNECTED_LED_PORT, CONNECTED_LED_PIN)
#define CONNECTED_LED_ON()      GPIO_PinOutSet(CONNECTED_LED_PORT, CONNECTED_LED_PIN)
#define CONNECTED_LED_READ()    GPIO_PinOutGet(CONNECTED_LED_PORT, CONNECTED_LED_PIN)
#define CONNECTED_LED_TOGGLE()  GPIO_PinOutToggle(CONNECTED_LED_PORT, CONNECTED_LED_PIN)
#define DEBUG1_PORT             gpioPortD
#define DEBUG1_PIN              2
#define DEBUG1_ON()             GPIO_PinOutSet(DEBUG1_PORT, DEBUG1_PIN)
#define DEBUG1_OFF()            GPIO_PinOutClear(DEBUG1_PORT, DEBUG1_PIN)
#define DEBUG2_PORT             gpioPortD
#define DEBUG2_PIN              3
#define DEBUG2_ON()             GPIO_PinOutSet(DEBUG2_PORT, DEBUG2_PIN)
#define DEBUG2_OFF()            GPIO_PinOutClear(DEBUG2_PORT, DEBUG2_PIN)
#define DINT()                  __disable_irq()

void Hal_buttonEnable(Hal_Handler handler) {
    handlerTab[BUTTON_HANDLER_ID] = buttonHandler;
    appButtonHandler = handler;
    GPIO_PinModeSet(BUTTON_PORT, BUTTON_PIN, gpioModeInput, 1);
    GPIO_IntConfig(BUTTON_PORT, BUTTON_PIN, false, true, false);  // falling edge
    GPIO_IntClear(1 << BUTTON_PIN);
    GPIO_IntEnable(1 << BUTTON_PIN);
    Hal_delay(100);
    NVIC_EnableIRQ(GPIO_EVEN_IRQn);  // for BUTTON_PIN
}

void Hal_init() {

    CHIP_Init();
    SystemCoreClockUpdate();

    CMU_ClockEnable(cmuClock_GPIO, true);
    CMU_ClockEnable(cmuClock_HFPER, true);
    CMU_ClockEnable(cmuClock_USART1, true);

    GPIO_PinModeSet(LED_PORT, LED_PIN, gpioModePushPull, 0);
    GPIO_PinModeSet(CONNECTED_LED_PORT, CONNECTED_LED_PIN, gpioModePushPull, 0);
    GPIO_PinModeSet(DEBUG1_PORT, DEBUG1_PIN, gpioModePushPull, 0);
    GPIO_PinModeSet(DEBUG2_PORT, DEBUG2_PIN, gpioModePushPull, 0);

    // UART

    GPIO_PinModeSet(EAP_RX_PORT, EAP_RX_PIN, gpioModeInput, 0);
    GPIO_PinModeSet(EAP_RX_ACK_PORT, EAP_RX_ACK_PIN, gpioModePushPull, 1);
    GPIO_PinModeSet(EAP_TX_PORT, EAP_TX_PIN, gpioModePushPull, 0);
    GPIO_PinModeSet(EAP_TX_ACK_PORT, EAP_TX_ACK_PIN, gpioModeInput, 0);

    GPIO_IntConfig(EAP_TX_ACK_PORT, EAP_TX_ACK_PIN, true, false, false);  // rising edge
    GPIO_IntClear(1 << EAP_TX_ACK_PIN);
    GPIO_IntEnable(1 << EAP_TX_ACK_PIN);

    USART_TypeDef *usart = USART1;
    USART_InitAsync_TypeDef init = USART_INITASYNC_DEFAULT;
    USART_InitAsync(usart, &init);
    usart->ROUTE = USART_ROUTE_RXPEN | USART_ROUTE_TXPEN | USART_ROUTE_LOCATION_LOC1;
    USART_IntClear(usart, _UART_IF_MASK);
    USART_IntEnable(usart, UART_IF_RXDATAV);

    NVIC_EnableIRQ(USART1_RX_IRQn);
    NVIC_EnableIRQ(GPIO_ODD_IRQn);  // for EAP_TX_ACK

    handlerTab[DISPATCH_HANDLER_ID] = Em_Message_dispatch;
}

void Hal_tickStart(uint16_t msecs, void (*handler)(void)) {
    handlerTab[TICK_HANDLER_ID] = handler;
    TIMER_Init_TypeDef init = TIMER_INIT_DEFAULT;
    init.prescale = timerPrescale1024;
    CMU_ClockEnable(cmuClock_TIMER1, true);
    TIMER_Init(TIMER1, &init);
    TIMER_TopSet(TIMER1, msecs * 16);
    TIMER_CounterSet(TIMER1, 0);
    TIMER_IntClear(TIMER1, 0x1);
    TIMER_IntEnable(TIMER1, 0x1);
    TIMER_Enable(TIMER1, true);
    NVIC_EnableIRQ(TIMER1_IRQn);
}
