==> crosser/examples-embedded/MSP-EXP430x/Platform-MSP-EXP430x/Hal/Hal.c <==
#include "Hal.h"
#include "Em_Message.h"
#include <msp430.h>
#define LED_CONFIG()                (P1DIR |= BIT6)
#define LED_ON()                    (P1OUT |= BIT6)
#define LED_OFF()                   (P1OUT &= ~BIT6)
#define LED_READ()                  (P1OUT & BIT6)
#define LED_TOGGLE()                (P1OUT ^= BIT6)
#define CONNECTED_LED_CONFIG()      (P1DIR |= BIT0)
#define CONNECTED_LED_ON()          (P1OUT |= BIT0)
#define CONNECTED_LED_OFF()         (P1OUT &= ~BIT0)
#define BUTTON_CONFIG()             (P1DIR &= ~BIT3, P1REN |= BIT3, P1OUT |= BIT3, P1IES |= BIT3);
#define BUTTON_ENABLE()             (P1IFG &= ~BIT3, P1IE |= BIT3)
#define BUTTON_PRESSED()            (!(P1IN & BIT3))
#define BUTTON_DEBOUNCE_MSECS       100
#define BUTTON_VECTOR               PORT1_VECTOR
#define DEBUG1_CONFIG()             (P2DIR |= BIT3)
#define DEBUG1_ON()                 (P2OUT |= BIT3)
#define DEBUG1_OFF()                (P2OUT &= ~BIT3)
#define DEBUG2_CONFIG()             (P2DIR |= BIT4)
#define DEBUG2_ON()                 (P2OUT |= BIT4)
#define DEBUG2_OFF()                (P2OUT &= ~BIT4)
#define EAP_RX_BUF                  UCA0RXBUF
#define EAP_TX_BUF                  UCA0TXBUF
#define EAP_CTL                     UCA0CTL1
#define EAP_IV                      2
#define EAP_RX_VECTOR               USCIAB0RX_VECTOR
#define EAP_TX_VECTOR               USCIAB0TX_VECTOR
#define EAP_TX_ACK_VECTOR           PORT2_VECTOR
#define EAP_RX_ENABLE()             (P1SEL |= BIT1, P1SEL2 |= BIT1)

void Hal_buttonEnable(Hal_Handler handler) {
    handlerTab[BUTTON_HANDLER_ID] = buttonHandler;
    appButtonHandler = handler;
    BUTTON_CONFIG();
    Hal_delay(100);
    BUTTON_ENABLE();
}

void Hal_init(void) {

    /* setup clocks */
    oscInit();

    /* setup LEDs */
    LED_CONFIG();
    LED_OFF();
    CONNECTED_LED_CONFIG();
    CONNECTED_LED_OFF();

    /* setup debug pins */
    DEBUG1_CONFIG(); DEBUG1_OFF();
    DEBUG2_CONFIG(); DEBUG2_OFF();
    DEBUG1_ON(); DEBUG1_OFF();

    /* setup TimerA1 */
    TA1CTL = TASSEL_1 + MC_2;           // ACLK, Continuous mode
    UART_WATCH_DISABLE();

    /* setup UART */
    uartInit();

    handlerTab[DISPATCH_HANDLER_ID] = Em_Message_dispatch;
}

void Hal_tickStart(uint16_t msecs, Hal_Handler handler) {
    handlerTab[TICK_HANDLER_ID] = handler;
    clockTick = (ACLK_TICKS_PER_SECOND * msecs) / 1000;
    TA1CCR0 = TA1R + clockTick;                 // Set the CCR0 interrupt for msecs from now.
    TA1CCTL0 = CCIE;                            // Enable the CCR0 interrupt
}
